# ChangeLog for dev-ruby/ruby-bsearch
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-bsearch/ChangeLog,v 1.3 2003/10/11 20:16:34 usata Exp $

*ruby-bsearch-1.5-r1 (12 Oct 2003)

  12 Oct 2003; Mamoru KOMACHI <usata@gentoo.org> ruby-bsearch-1.5-r1.ebuild:
  Use ruby.eclass, changed installation path.

*ruby-bsearch-1.5 (10 Jun 2003)

  29 Jul 2003; Mamoru KOMACHI <usata@gentoo.org> ruby-bsearch-1.5.ebuild:
  Added ~ppc keyword

  10 Jun 2003; Tom Payne <twp@gentoo.org> ruby-bsearch-1.5 :
  Initial release. Ebuild submitted by Matsuu Takuto. Bug # 22030.