@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-bsearch/ruby-bsearch-1.5-r1.ebuild,v 1.1 2003/10/11 20:16:34 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-bsearch/ruby-bsearch-1.5-r1.ebuild,v 1.2 2003/12/05 15:38:47 weeve Exp $
 
 inherit ruby
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://namazu.org/~satoru/ruby-bsearch/"
 SRC_URI="http://namazu.org/~satoru/ruby-bsearch/${P}.tar.gz"
 LICENSE="Ruby"
 SLOT="0"
-KEYWORDS="~alpha ~arm ~hppa ~mips ~ppc ~sparc x86"
+KEYWORDS="~alpha ~arm ~hppa ~mips ~ppc sparc x86"
 IUSE=""
 DEPEND="dev-lang/ruby"
 
