@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-romkan/ruby-romkan-0.4-r1.ebuild,v 1.1 2003/10/11 20:20:10 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-romkan/ruby-romkan-0.4-r1.ebuild,v 1.2 2003/12/05 15:37:49 weeve Exp $
 
 inherit ruby
 
@@ -9,6 +9,6 @@ HOMEPAGE="http://namazu.org/~satoru/ruby-romkan/"
 SRC_URI="http://namazu.org/~satoru/ruby-romkan/${P}.tar.gz"
 LICENSE="Ruby"
 SLOT="0"
-KEYWORDS="~alpha ~arm ~hppa ~mips ~ppc ~sparc x86"
+KEYWORDS="~alpha ~arm ~hppa ~mips ~ppc sparc x86"
 IUSE=""
 DEPEND="dev-lang/ruby"
