@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-romkan
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-romkan/ChangeLog,v 1.3 2003/10/11 20:20:10 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-romkan/ChangeLog,v 1.4 2003/12/05 15:37:49 weeve Exp $
+
+  05 Dec 2003; Jason Wever <weeve@gentoo.org> ruby-romkan-0.4-r1.ebuild:
+  Marked stable on sparc to fix broken dependencies.
 
 *ruby-romkan-0.4-r1 (12 Oct 2003)
 
